#
# Makefile.am for snapper/examples
#

INCLUDES = -I$(top_srcdir)

LDADD = ../snapper/libsnapper.la -lboost_thread-mt

noinst_PROGRAMS = List ListAll Create CmpDirs CreateTimeline SnapTest

List_SOURCES = List.cc

ListAll_SOURCES = ListAll.cc

Create_SOURCES = Create.cc

CmpDirs_SOURCES = CmpDirs.cc

CreateTimeline_SOURCES = CreateTimeline.cc

SnapTest_SOURCES = SnapTest.cc

