# Sources for snapper

module_DATA = \
  modules/Snapper.rb

client_DATA = \
  clients/snapper.rb

yncludedir = @yncludedir@/snapper
ynclude_DATA = \
  include/snapper/wizards.rb \
  include/snapper/dialogs.rb \
  include/snapper/helps.rb

scrconf_DATA = \
  scrconf/snapper.scr

desktop_DATA = \
  desktop/snapper.desktop

EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common